feat: Add Skillhub MCP server implementation with support for Claude-style skills
- Introduced README.zh-CN.md for Chinese documentation of Skillhub MCP.
- Implemented core server functionality in _server.py, including skill discovery, registration, and resource management.
- Created Skill, SkillMetadata, and SkillRegistry classes to manage skills and their metadata.
- Added command-line interface in __main__.py for running the server with various transport options.
- Established versioning with _version.py, setting initial version to 1.0.0.
- Enhanced logging capabilities for better debugging and error tracking.
- Included resource fetching functionality compliant with MCP specifications.

--- a/.agentdocs/plans/2026-01-18/品牌重命名-优化方案.md
+++ b/.agentdocs/plans/2026-01-18/品牌重命名-优化方案.md
@@ -2,13 +2,13 @@
 
 # 方案概述
 目标是将项目中的品牌名称与 GitHub 账号统一替换：
-- “Skillz” 统一替换为 “Skills MCP”
+- “Skillz” 统一替换为 “Skillhub MCP”
 - “intellectronica” 统一替换为 “214140846”
 
 该改动属于全局品牌重命名，需覆盖文档、配置、可执行入口描述与日志文本，确保对外展示、使用说明、以及运行时提示一致。
 
 # 需求清单
-- [ ] 全文统一替换 “Skillz” 为 “Skills MCP”
+- [ ] 全文统一替换 “Skillz” 为 “Skillhub MCP”
 - [ ] 全文统一替换 “intellectronica” 为 “214140846”
 - [ ] 更新 README 中的安装、运行、链接与示例文本
 - [ ] 更新配置与元数据（如包描述、主页、Issue 链接）
@@ -36,7 +36,7 @@ flowchart TD
 # 待确认事项
 - “intellectronica” 在邮箱与域名中的替换规则是否为原样替换（例如 eleanor@214140846.net）(需用户确认)
 - Docker 镜像名与 GitHub 链接是否完全按新账号替换（例如 214140846/skillz）(需用户确认)
-- 是否需要同时将项目展示名与 CLI help 中的 “Skillz” 改为 “Skills MCP”，保持对外一致性 (需用户确认)
+- 是否需要同时将项目展示名与 CLI help 中的 “Skillz” 改为 “Skillhub MCP”，保持对外一致性 (需用户确认)
 
 # 风险与回滚
 - 风险：外部链接与镜像名变更可能导致旧文档指向失效
